--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Tianya Zhang"
+title                    : "Tianya Terry Zhang"
 title_separator          : "-"
 name                     : &name "Tianya Zhang"
 description              : &description "PhD Candidate"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "PhD Condidate"
   avatar           : "profile.png"
-  bio              : "Analyze, verify, and interpret using engineering principles "
+  bio              : "Analyze, verify, and interpret based on engineering principles "
   location         : "New Jersey"
   employer         :
   pubmed           : 
