--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "PhD Condidate"
+  name             : "PhD Candidate"
   avatar           : "profile.png"
   bio              : "Analyze, verify, and interpret based on engineering principles "
   location         : "New Jersey"
