--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,5 +9,5 @@ main:
   - title: "CV"
     url: cv/
     
-  - title: "Highlights"
-    url: Highlights/
+  - title: "Publications"
+    url: publications/
