--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Tianya T. Zhang"
 title_separator          : "-"
 name                     : &name "Tianya Zhang"
 description              : &description "PhD Candidate"
-url                      : https://teryzh.github.io/Website/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://teryzh.github.io/Website  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "TeRyZh"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
