--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,13 +4,13 @@ main:
 #     url: about/    
 
   - title: "Projects"
-    url: projects/
+    url: /projects/
     
   - title: "Talks"
     url: /talks/   
 
   - title: "CV"
-    url: cv/
+    url: /cv/
     
   - title: "Publications"
-    url: publications/
+    url: /publications/
