--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          : "-"
 name                     : &name "Tianya Zhang"
 description              : &description "PhD Candidate"
 url                      : https://teryzh.github.io  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/Website/" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/Website" # the subpath of your site, e.g. "/blog"
 repository               : "TeRyZh"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
