--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "PhD Candidate"
   avatar           : "profile.png"
-  bio              : "Analyze, verify, and interpret based on engineering principles "
+  bio              : "Applying Advanced Algorithm, Computation and Information Technology to ITS"
   location         : "New Jersey"
   employer         :
   pubmed           : 
