--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Tianya T. Zhang"
 title_separator          : "-"
 name                     : &name "Tianya Zhang"
-description              : &description "PhD Candidate"
+description              : &description "Postdoc"
 url                      : https://teryzh.github.io  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/Website" # the subpath of your site, e.g. "/blog"
 repository               : "TeRyZh"
