--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "PhD Candidate"
+  name             : ""
   avatar           : "profile.png"
   bio              : "Applying Advanced Algorithm, Computation and Information Technology to ITS"
   location         : "New Jersey"
