--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "tianya-t-zhang-461912137"
+  linkedin         : "tianya-zhang-461912137"
   orcid            : #"http://orcid.org/0000-0002-7606-9886"
   pinterest        :
   soundcloud       :
