--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Tianya T. Zhang"
+title                    : "T.Terry Zhang"
 title_separator          : "-"
 name                     : &name "Tianya Zhang"
 description              : &description "Postdoc"
