--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale                   : "en-US"
 title                    : "Tianya "Terry" Zhang"
 title_separator          : "-"
-name                     : &name "Tianya Zhang"
-description              : &description "Postdoc"
+name                     : &name "Terry Zhang"
+description              : &description "Research Assistant Professor"
 url                      : https://teryzh.github.io  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/Website" # the subpath of your site, e.g. "/blog"
 repository               : "TeRyZh"
