--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Tianya "Terry" Zhang"
+title                    : "Terry T. Zhang"
 title_separator          : "-"
 name                     : &name "Terry Zhang"
 description              : &description "Research Assistant Professor"
