--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Tianya Terry Zhang"
+title                    : "Tianya Zhang"
 title_separator          : "-"
-name                     : &name "Terry Zhang"
+name                     : &name "Tianya Zhang"
 description              : &description "Research Assistant Professor"
 url                      : https://teryzh.github.io  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/Website" # the subpath of your site, e.g. "/blog"
